Fix for WMS-6062: Blob type field in liveform is not showing the upload button.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -683,6 +683,10 @@ body {
         width: 75%;
       }
     }
+    .app-blob-upload {
+      opacity: 1;
+      position: relative;
+    }
   }
 
   /************************************************** Page Transitions *************************************************/
